--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -125,24 +125,36 @@
                             </div>
                         </div>
 
-                        <div id="">
+                        <div id="downloadBySelect">
                             <hr />
-                            <h5>导出</h5>
+                            <h5>选择导出</h5>
                             <div class="row" style="margin-top: 20px; padding-bottom: 20px;">
                                 <div class="col-md-4">
                                     <select class="form-control" id="optionSites">
                                     </select>
                                     <br />
-                                    <button type="button" class="btn btn-black" onclick=""><span
+                                    <button type="button" class="btn btn-black" onclick="downloadCsvFile()"><span
                                             class="glyphicon glyphicon-download-alt" aria-hidden="true"></span> 导出
-                                    </button>
-                                    <button type="button" class="btn btn-black" onclick=""><span
-                                            class="glyphicon glyphicon-download-alt" aria-hidden="true"></span> 导出全部
                                     </button>
                                 </div>
 
                             </div>
                         </div>
+
+                        <div id="">
+                            <hr />
+                            <h5>全部导出</h5>
+                            <div class="row" style="margin-top: 20px; padding-bottom: 20px;">
+                                <div class="col-md-4">
+                                    <button type="button" class="btn btn-black" onclick="downloadAllCsvFile()"><span
+                                            class="glyphicon glyphicon-download-alt" aria-hidden="true"></span> 导出
+                                    </button>
+                                </div>
+
+                            </div>
+                        </div>
+
+
 
                         <div id="importedSearchResult">
                             <hr />
@@ -180,6 +192,7 @@
                                     <thead>
                                     <tr>
                                         <th>姓名</th>
+                                        <th>所属站点</th>
                                         <th>身份证号</th>
                                         <th>报考层次</th>
                                         <th>专业名称</th>
@@ -496,6 +509,7 @@
                     for (var i = 0; i < result.data.length; i++) {
                         var html = "<tr>";
                         html += "<td>" + result.data[i]["name"] + "</td>";
+                        html += "<td>" + sites[result.data[i]["siteId"]] + "</td>";
                         html += "<td>" + result.data[i]["num"] + "</td>";
                         html += "<td>" + result.data[i]["enroll"] + "</td>";
                         html += "<td>" + result.data[i]["major"] + "</td>";
@@ -538,6 +552,7 @@
                     for (var i = 0; i < result.data.length; i++) {
                         var html = "<tr>";
                         html += "<td>" + result.data[i]["name"] + "</td>";
+                        html += "<td>" + sites[result.data[i]["siteId"]] + "</td>";
                         html += "<td>" + result.data[i]["num"] + "</td>";
                         html += "<td>" + result.data[i]["enroll"] + "</td>";
                         html += "<td>" + result.data[i]["major"] + "</td>";
@@ -823,10 +838,19 @@
                     if (!result.data) {
                         $("#siteAdmin").hide();
                         $("#teacherAdmin").hide();
+                        $("#downloadBySelect").hide();
                     }
                 }
             }
         });
+    }
+    
+    function downloadCsvFile() {
+        window.location.href="/v1/download?siteId=" + $("#optionSites").val()
+    }
+    
+    function downloadAllCsvFile() {
+        window.location.href="/v1/download?siteId=" + window.localStorage.getItem("siteId")
     }
 </script>
 </body>
