--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -93,6 +93,10 @@
                                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> 解析文件内容
                             </button>
                         </div>
+
+                        <div id="importedMessage" style="display: none">
+                            <div class="alert alert-warning" role="alert">点击{ 导入文件内容 } 按钮后, 此表格剩余的数据为未导入的数据</div>
+                        </div>
                         <div id="analyzedCsvTable">
                             <table class="table table-hover table-bordered">
                                 <thead>
@@ -445,6 +449,7 @@
     function fetchImportModifiedUserApi() {
         // 替换 fetchImportCsvFileApi
         // TODO 替换
+        $("#importedMessage").show();
         var url = "/v1/user";
         $.ajax({
             headers: {
@@ -457,6 +462,7 @@
             statusCode: {
                 200: function(result) {
                     $("#importCsvBtn").prop('disabled', true);
+                    $("#analyzed > tr").remove();
                     return logger("导入成功", result["message"], "info")
                 },
                 400: function (result) {
